[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["t_xinlin@sina.com <Happy100>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.0-beta.5"
actix-web = "4.0.0-beta.6"
actix-http = { version = "3.0.0-beta.6" }

futures = "0.3.1"
futures-util = "^0.3.7"
derive_more = "0.99.14"
serde = { version = "1.0", features = ["derive"] }

log = "*"
log4rs = "*"
lazy_static = "*"
cron = "0.9.0"

serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "^1.3", features = ["full"] }
tokio-cron-scheduler = { version = "0.1.0", path = "../tokio-cron-scheduler" }


# crypto
ring = "0.16.20"
data-encoding = "2.3.2"

[dev-dependencies]
tokio-cron-scheduler = { version = "0.1.0", path = "../tokio-cron-scheduler" }
