[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["t_xinlin@sina.com <Happy100>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = { version = "2.0.2" }
actix-web = { version = "4.3.1" }
actix-http = { version = "3.3.1" }
actix-router = { version = "0.5.1" }
actix-utils = { version = "3.0.1" }
actix-cors = { version = "0.6.4" }

futures = "0.3.1"
futures-util = "^0.3.7"
derive_more = "0.99.14"
serde = { version = "1.0", features = ["derive"] }
log = "*"
log4rs = { version = "*", features = ["toml_format"] }
lazy_static = "*"
cron = "0.9.0"
serde_json = "1.0"
serde_derive = { version = "1.0.163" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "^1.3", features = ["full"] }
tokio-cron-scheduler = { version = "*" }
# crypto
ring = "0.16.20"
data-encoding = "2.3.2"
hmac = "0.11.0"
sha2 = "0.9.5"
crypto = "0.2.0"
url = "2.2.2"
url-escape = "0.1.0"
html-escape = "0.2.9"
urlencoding = "1.3.3"
url_encoded_data = "0.6.1"
pin-project-lite = "0.2.7"
pin-project = "1"
ahash = "0.7"
futures-core = { version = "0.3.7", default-features = false }
regex = "1.5.5"
bytes = "1"
time = { version = "0.3", default-features = false, features = ["formatting"] }
json = "0.12"
async-trait = { version = "0.1.68" }
sqlite = { version = "0.31.0" }
uuid = { version = "1.4.0" }
toml = { version = "0.4.2" }
validator = { version = "0.15", features = ["derive"] }

[dev-dependencies]
#tokio-cron-scheduler = { version = "0.1.0", path = "../tokio-cron-scheduler" }

[features]
foo = []
