
[package]
name = "http-reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
log4rs = "1.0.0"

reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

#lazy_static = "*"
#cron = "0.9.0"
##serde and base types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#
#chrono = { version = "0.4", features = ["serde"] }

#tokio-cron-scheduler = { version =  "0.5.0", features = ["signal"] }
tokio-cron-scheduler = { version =  "0.5.0"}
