[package]
name = "kafka-v1"
version = "0.1.0"
authors = ["t_xinlin@sina.com <Happy100>"]
edition = "2018"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25.0", features = ["dynamic_linking", "ssl", "gssapi", "libz"] }
#rdkafka-sys = { version = "2.0.0", default-features = false }
#rdkafka-sys = { path = "rdkafka-sys", version = "4.0.0", default-features = false }
futures = "0.3.0"
libc = "0.2.0"
#log = "0.4.8"
log = "*"
log4rs = "*"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.0"
serde_json = "1.0.0"
slab = "0.4"
#tokio = { version = "1.0", features = ["rt", "time"], optional = true }
tokio = { version = "^1.9", features = ["full"] }
snap = "1.0.5"
time = "0.2.27"
toml = { version = "0.5" }

[build-dependencies]
pkg-config = "0.3.9"
