[package]
name = "log-rs"
version = "0.1.0"
authors = ["t_xinlin@sina.com <Happy100>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
log4rs = "*"
lazy_static = "*"
cron = "0.6.1"
#serde and base types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
