[package]
name = "sqlx-rs"
version = "0.1.0"
authors = ["t_xinlin@sina.com <Happy100>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
futures = "0.3"
paw = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }

#sqlx = { version = "0.4.1", features = [ "postgres" ] }
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "mysql", "chrono" ] }
#async-std = { version = "1.6", features = [ "attributes" ] }

serde = "1.0"
serde_json = "1.0"

toml = "0.5"

serde_derive = "1.0.104"
datetime = "0.4.7"
