[package]
name = "tokio-cron-scheduler"
version = "0.1.0"
authors = ["t_xinlin@sina.com <Happy100>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
cron = "0.8"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }

[lib]
name = "tokio_cron_scheduler"
path = "src/lib.rs"
